--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,13 @@
 42. responsive
 
 */
+
+.tt-menu {
+  width: 100%;
+    background: #fff;
+    border: 1px solid #cacaca;
+    margin-top: 5px;
+}
 .preloader {
   width: 100%;
   height: 100%;
